# apc-switched-rack-pdu-control-panel

./: MANIFEST.in  README.md  pyproject.toml  run.py
apc_switched_rack_pdu_control_panel/: __init__.py  forms.py  jinja2_hash_filter.py  views.py
apc_switched_rack_pdu_control_panel/templates/: index.html.j2  svg_symbols.j2  system_table.html.j2
instance/: config.py.example
