[build-system]
requires = ["setuptools >= 61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "apc_switched_rack_pdu_control_panel"
version = "0.2.0"
dependencies = [
  "Flask",
  "easysnmp",
  "wtforms",
]
requires-python = ">=3.6"
authors = [
  {name = "Christian Schürmann", email = "spike@fedoraproject.org"},
]
description = "APC switched rack PDU control panel"
readme = "README.md"
classifiers = [
  "Development Status :: 4 - Beta",
  "Environment :: Web Environment",
  "Framework :: Flask",
  "Intended Audience :: System Administrators",
  "Operating System :: POSIX :: Linux",
  "Programming Language :: Python",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.6",
  "Programming Language :: Python :: 3.7",
  "Programming Language :: Python :: 3.8",
  "Programming Language :: Python :: 3.9",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Topic :: System",
  "Topic :: System :: Systems Administration",
  "Topic :: Utilities",
]

[project.urls]
Homepage = "https://github.com/spike77453/apc-switched-rack-pdu-control-panel"
Repository = "https://github.com/spike77453/apc-switched-rack-pdu-control-panel.git"

[tool.setuptools]
packages = ["apc_switched_rack_pdu_control_panel"]
